--- a/index.html
+++ b/index.html
@@ -1,1 +1,378 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1"><meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><link rel=icon href=/favicon.ico><title>Vue Admin Template</title><script src="http://api.map.baidu.com/api?v=2.0&ak=BIsAoInTiOedS9ExArMA0LrbG59foNUP"></script><link href=/static/css/app.a7e5afd6.css rel=preload as=style><link href=/static/css/chunk-elementUI.b80cec6e.css rel=preload as=style><link href=/static/css/chunk-libs.3dfb7769.css rel=preload as=style><link href=/static/js/app.e08120c0.js rel=preload as=script><link href=/static/js/chunk-elementUI.63d47698.js rel=preload as=script><link href=/static/js/chunk-libs.764427cc.js rel=preload as=script><link href=/static/js/runtime.493d3ee7.js rel=preload as=script><link href=/static/css/chunk-elementUI.b80cec6e.css rel=stylesheet><link href=/static/css/chunk-libs.3dfb7769.css rel=stylesheet><link href=/static/css/app.a7e5afd6.css rel=stylesheet></head><body><noscript><strong>We're sorry but Vue Admin Template doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script>(function(e){function n(n){for(var r,c,o=n[0],d=n[1],f=n[2],i=0,h=[];i<o.length;i++)c=o[i],u[c]&&h.push(u[c][0]),u[c]=0;for(r in d)Object.prototype.hasOwnProperty.call(d,r)&&(e[r]=d[r]);l&&l(n);while(h.length)h.shift()();return a.push.apply(a,f||[]),t()}function t(){for(var e,n=0;n<a.length;n++){for(var t=a[n],r=!0,c=1;c<t.length;c++){var o=t[c];0!==u[o]&&(r=!1)}r&&(a.splice(n--,1),e=d(d.s=t[0]))}return e}var r={},c={runtime:0},u={runtime:0},a=[];function o(e){return d.p+"static/js/"+({}[e]||e)+"."+{"chunk-29e3b964":"bf857d8d","chunk-74681415":"d381f66a","chunk-111349b9":"dc4587d7","chunk-74b10cda":"80e844a1","chunk-6b95cc43":"bcc0b70e","chunk-861914fe":"422c38d6","chunk-1166b64e":"6485f5b8","chunk-20a1cea9":"d01585b2","chunk-474d32d7":"06be76d8","chunk-79563d1b":"9105bb6d","chunk-94466254":"3ba37669","chunk-dfba8782":"a93440a4","chunk-84b9f8fa":"4fca01c3"}[e]+".js"}function d(n){if(r[n])return r[n].exports;var t=r[n]={i:n,l:!1,exports:{}};return e[n].call(t.exports,t,t.exports,d),t.l=!0,t.exports}d.e=function(e){var n=[],t={"chunk-29e3b964":1,"chunk-74681415":1,"chunk-74b10cda":1,"chunk-6b95cc43":1,"chunk-1166b64e":1,"chunk-20a1cea9":1,"chunk-474d32d7":1,"chunk-79563d1b":1,"chunk-94466254":1,"chunk-dfba8782":1,"chunk-84b9f8fa":1};c[e]?n.push(c[e]):0!==c[e]&&t[e]&&n.push(c[e]=new Promise((function(n,t){for(var r="static/css/"+({}[e]||e)+"."+{"chunk-29e3b964":"9d0ece42","chunk-74681415":"b9d7a12c","chunk-111349b9":"31d6cfe0","chunk-74b10cda":"2302fdba","chunk-6b95cc43":"7ec223cf","chunk-861914fe":"31d6cfe0","chunk-1166b64e":"be09f44c","chunk-20a1cea9":"ca9d7798","chunk-474d32d7":"75cea1dd","chunk-79563d1b":"9ea1db3d","chunk-94466254":"a2d7eb46","chunk-dfba8782":"5d168604","chunk-84b9f8fa":"77c6bf05"}[e]+".css",u=d.p+r,a=document.getElementsByTagName("link"),o=0;o<a.length;o++){var f=a[o],i=f.getAttribute("data-href")||f.getAttribute("href");if("stylesheet"===f.rel&&(i===r||i===u))return n()}var h=document.getElementsByTagName("style");for(o=0;o<h.length;o++){f=h[o],i=f.getAttribute("data-href");if(i===r||i===u)return n()}var l=document.createElement("link");l.rel="stylesheet",l.type="text/css",l.onload=n,l.onerror=function(n){var r=n&&n.target&&n.target.src||u,a=new Error("Loading CSS chunk "+e+" failed.\n("+r+")");a.code="CSS_CHUNK_LOAD_FAILED",a.request=r,delete c[e],l.parentNode.removeChild(l),t(a)},l.href=u;var b=document.getElementsByTagName("head")[0];b.appendChild(l)})).then((function(){c[e]=0})));var r=u[e];if(0!==r)if(r)n.push(r[2]);else{var a=new Promise((function(n,t){r=u[e]=[n,t]}));n.push(r[2]=a);var f,i=document.createElement("script");i.charset="utf-8",i.timeout=120,d.nc&&i.setAttribute("nonce",d.nc),i.src=o(e),f=function(n){i.onerror=i.onload=null,clearTimeout(h);var t=u[e];if(0!==t){if(t){var r=n&&("load"===n.type?"missing":n.type),c=n&&n.target&&n.target.src,a=new Error("Loading chunk "+e+" failed.\n("+r+": "+c+")");a.type=r,a.request=c,t[1](a)}u[e]=void 0}};var h=setTimeout((function(){f({type:"timeout",target:i})}),12e4);i.onerror=i.onload=f,document.head.appendChild(i)}return Promise.all(n)},d.m=e,d.c=r,d.d=function(e,n,t){d.o(e,n)||Object.defineProperty(e,n,{enumerable:!0,get:t})},d.r=function(e){"undefined"!==typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},d.t=function(e,n){if(1&n&&(e=d(e)),8&n)return e;if(4&n&&"object"===typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(d.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&n&&"string"!=typeof e)for(var r in e)d.d(t,r,function(n){return e[n]}.bind(null,r));return t},d.n=function(e){var n=e&&e.__esModule?function(){return e["default"]}:function(){return e};return d.d(n,"a",n),n},d.o=function(e,n){return Object.prototype.hasOwnProperty.call(e,n)},d.p="/",d.oe=function(e){throw console.error(e),e};var f=window["webpackJsonp"]=window["webpackJsonp"]||[],i=f.push.bind(f);f.push=n,f=f.slice();for(var h=0;h<f.length;h++)n(f[h]);var l=i;t()})([]);</script><script src=/static/js/chunk-elementUI.63d47698.js></script><script src=/static/js/chunk-libs.764427cc.js></script><script src=/static/js/app.e08120c0.js></script></body></html>
+<html>
+<div class="all">
+
+    <div class="menu">
+
+        <ul class="ul">
+            <li class="li">
+                <a href="#introduction">
+                    Introduction
+                </a>
+            </li>
+            <li class="li">
+                <a href="#Example">
+                    Example
+                </a>
+            </li>
+            <li class="li">
+                <a href="#benefit">
+                    Benefit
+                </a>
+            </li>
+        </ul>
+
+    </div>
+    <div class="body">
+        <div class="allContent">
+            <div class="paragraph">
+                <h1>1. Introduction</h1>
+                <div id="introduction" class="content">
+                    This project is an interface calling framework based on springboot. It encapsulates RestTemplate and
+                    uses dynamic proxy technology to convert the call to controller into direct call to interface.
+                </div>
+            </div>
+            <div class="paragraph">
+                <h1>2. Example</h1>
+                <div id="Example" class="content">
+                    The following procedure is the classic application of springboot:
+                    <div class="code" id="code1">
+                        <div class="packageName">
+                            package io.github.q843705423;
+                        </div>
+                        <div class="import">
+                            import org.springframework.boot.SpringApplication;
+                        </div>
+                        <div class="import">
+                            import org.springframework.boot.autoconfigure.SpringBootApplication;
+                        </div>
+                        <div class="import">
+                            import org.springframework.web.bind.annotation.PostMapping;
+                        </div>
+
+                        <div class="import">
+                            import org.springframework.web.bind.annotation.RestController;
+                        </div>
+
+                        <div class="anno">@SpringBootApplication</div>
+                        <div class="anno"> @RestController</div>
+                        <div class="anno"> @RequestMapping("demo")</div>
+                        <div class="clazz">public class DemoApplication {</div>
+                        <div class="normal layer-2">public static void main(String[] args) {</div>
+                        <div class="normal layer-3">SpringApplication.run(DemoApplication.class, args);</div>
+                        <div class="normal layer-2">}</div>
+                        <div class="normal layer-2">@PostMapping</div>
+                        <div class="normal layer-2"> public String hello(Student student) {</div>
+                        <div class="normal layer-3"> return "hello,"+student.getName();</div>
+                        <div class="normal layer-2">}</div>
+                        <div class="normal layer-1">}</div>
+
+
+                        <br>
+
+                    </div>
+                </div>
+            </div>
+            <div class="paragraph">
+                <div class="content">
+                    Curl or postman is a good tool if we want to test the interface. But if we want to solidify the test
+                    or conduct highly automated test, we can also write some interface tests in the test class. The code
+                    is as follows:
+                    <div id="code2" class="code"></div>
+
+                </div>
+            </div>
+            <div class="paragraph">
+                <div class="content">
+
+                </div>
+
+            </div>
+            <div class="paragraph">
+                <div class="content">
+                    It seems to work very well, but it's not concise enough
+
+                </div>
+                <div class="content">
+                    In fact, if the @Requestbody annotation is in the parameter, or there is an interface for file
+                    upload, we usually have to try to construct the appropriate parameter and then call RestTemplate
+
+                </div>
+            </div>
+            <div class="paragraph">
+                <div class="content">
+                    Why don't we ignore some details and make it simpler.
+                    That's why autumn was born.
+                </div>
+                <div class="content">
+
+                    Here's the code for autumn
+                </div>
+
+            </div>
+            <div class="paragraph">
+                <div class="content">
+                    <div class="code" id="code3"></div>
+                </div>
+                <div class="content">
+                    Autumn provides the ability to convert a method call to an interface call, which means that you
+                    think you are calling a method, but you are actually calling the interface corresponding to the
+                    method. It's fun, isn't it
+                </div>
+            </div>
+            <div class="paragraph" id="benefit">
+                <h1>3.Benefit</h1>
+                <div>
+
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+</html>
+<script>
+    var code1 =
+        `
+package io.github.q843705423;
+
+import io.github.q843705423.entity.Student;
+import org.springframework.boot.SpringApplication;
+import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@SpringBootApplication
+@RestController
+@RequestMapping("demo")
+public class DemoApplication {
+
+    public static void main(String[] args) {
+        SpringApplication.run(DemoApplication.class, args);
+    }
+
+    @PostMapping("world")
+    public String hello(Student student) {
+        return "hello,"+student.getName();
+    }
+
+}
+        `;
+    var code2 = `
+
+package io.github;
+
+import org.junit.Test;
+import org.springframework.http.HttpEntity;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.client.RestTemplate;
+
+public class DemoApplicationTests {
+
+    @Test
+    public void test1() {
+        RestTemplate restTemplate = new RestTemplate();
+        String s = restTemplate.postForObject("http://localhost:8000/demo/hello?id=1&name=Tom", new HttpEntity<>(null), String.class);
+        assert "hello,Tom".equals(s);
+    }
+
+}
+
+    `
+
+    var code3 = `
+package io.github;
+
+import io.github.q843705423.DemoApplication;
+import io.github.q843705423.entity.Student;
+import org.junit.Test;
+import org.seventy.seven.autumn.DefaultContextFactory;
+import org.seventy.seven.autumn.entity.Configuration;
+
+public class DemoApplicationTests {
+
+    @Test
+    public void test() {
+        DefaultContextFactory defaultContextFactory = new DefaultContextFactory(new Configuration("http://127.0.0.1:8000"));
+        DemoApplication controller = defaultContextFactory.getBean(DemoApplication.class);
+        String tom = controller.hello(new Student("1", "Tom"));
+        assert "hello,Tom".equals(tom);
+    }
+}
+    `
+
+    function colorful(code) {
+        code = code.replace(/([a-z][A-Z]*)/g, "$1");
+        code = code.replace(/public/g, "<span style='color:orange'>public</span>")
+        code = code.replace(/import/g, "<span style='color:orange'>import</span>")
+        code = code.replace(/static/g, "<span style='color:orange'>static</span>")
+        code = code.replace(/void/g, "<span style='color:orange'>void</span>")
+        code = code.replace(/class/g, "<span style='color:orange'>class</span>")
+        return code;
+
+    }
+
+    // console.log(find)
+
+
+    function good(normalLine, layerNum) {
+        if (normalLine.indexOf('import') !== -1) {
+            return '<div class="import layer-{num}">{normalLine}</div>'
+                .replace("{normalLine}", normalLine).replace("{num}", layerNum);
+        } else if (normalLine.indexOf("package") !== -1) {
+            return '<div class="packageName layer-{num}">{normalLine}</div>'
+                .replace("{normalLine}", normalLine).replace("{num}", layerNum);
+        } else if (normalLine.indexOf('@') !== -1) {
+            return '<div class="anno layer-{num}">{normalLine}</div>'
+                .replace("{normalLine}", normalLine).replace("{num}", layerNum);
+        } else {
+            return '<div class="normal layer-{num}">{normalLine}</div>'
+                .replace("{normalLine}", normalLine).replace("{num}", layerNum);
+        }
+        // return normalLine;
+
+    }
+
+    function form(a, divId) {
+        a = colorful(a);
+
+        let all = '';
+        let normalLine = '';
+        let nowLayerNum = 1;
+        let nextLayerNum = 1;
+        for (let i = 0; i < a.length; i++) {
+            normalLine += a[i];
+            if (a[i] === '\n') {
+                nextLayerNum = nowLayerNum;
+                if (normalLine.indexOf("{") !== -1) {
+                    nextLayerNum++;
+                }
+                if (normalLine.indexOf("}") !== -1) {
+                    nowLayerNum--;
+                }
+                all += good(normalLine, nowLayerNum);
+                normalLine = '';
+                nowLayerNum = nextLayerNum;
+                nextLayerNum = nowLayerNum;
+
+            }
+        }
+        document.getElementById(divId).innerHTML = all;
+    }
+
+    form(code1, "code1");
+    form(code2, "code2");
+    form(code3, "code3");
+
+
+</script>
+<style>
+    * {
+        margin: 0 0 0 0;
+        padding: 0 0 0 0;
+    }
+
+    h1 {
+        font-size: 40px;
+    }
+
+    .all {
+        margin: 70px 0 0 80px;
+
+    }
+
+    .ul {
+
+    }
+
+    .li {
+        font-size: 30px;
+        line-height: 50px;
+
+    }
+
+    .code {
+        padding: 10px 10px;
+        color: white;
+        margin: 20px 0 0 0;
+        background: black;
+    }
+
+    .menu {
+        float: left;
+    }
+
+    .body {
+        float: left;
+
+    }
+
+    .clear {
+        clear: none;
+        content: '';
+    }
+
+    .allContent {
+        margin: 20px 0 0 80px;
+    }
+
+    .paragraph {
+        margin-bottom: 40px;
+    }
+
+    .content {
+        margin: 40px 0 0 0;
+        text-indent: 40px;
+        font-size: 20px
+
+
+    }
+
+    .clazz {
+        color: white;
+    }
+
+    .packageName {
+        color: white;
+    }
+
+    .import {
+        color: white;
+    }
+
+
+    .import {
+
+    }
+
+    .layer-1 {
+        margin-left: 0px;
+
+    }
+
+    .layer-2 {
+        margin-left: 40px;
+
+    }
+
+    .layer-3 {
+        margin-left: 80px;
+
+    }
+
+    .layer-4 {
+        margin-left: 120px;
+
+    }
+
+    .anno {
+        color: burlywood;
+    }
+
+    .normal {
+        color: white;
+    }
+
+</style>
