--- a/index.html
+++ b/index.html
@@ -1,378 +1,2 @@
-<html>
-<div class="all">
-
-    <div class="menu">
-
-        <ul class="ul">
-            <li class="li">
-                <a href="#introduction">
-                    Introduction
-                </a>
-            </li>
-            <li class="li">
-                <a href="#Example">
-                    Example
-                </a>
-            </li>
-            <li class="li">
-                <a href="#benefit">
-                    Benefit
-                </a>
-            </li>
-        </ul>
-
-    </div>
-    <div class="body">
-        <div class="allContent">
-            <div class="paragraph">
-                <h1>1. Introduction</h1>
-                <div id="introduction" class="content">
-                    This project is an interface calling framework based on springboot. It encapsulates RestTemplate and
-                    uses dynamic proxy technology to convert the call to controller into direct call to interface.
-                </div>
-            </div>
-            <div class="paragraph">
-                <h1>2. Example</h1>
-                <div id="Example" class="content">
-                    The following procedure is the classic application of springboot:
-                    <div class="code" id="code1">
-                        <div class="packageName">
-                            package io.github.q843705423;
-                        </div>
-                        <div class="import">
-                            import org.springframework.boot.SpringApplication;
-                        </div>
-                        <div class="import">
-                            import org.springframework.boot.autoconfigure.SpringBootApplication;
-                        </div>
-                        <div class="import">
-                            import org.springframework.web.bind.annotation.PostMapping;
-                        </div>
-
-                        <div class="import">
-                            import org.springframework.web.bind.annotation.RestController;
-                        </div>
-
-                        <div class="anno">@SpringBootApplication</div>
-                        <div class="anno"> @RestController</div>
-                        <div class="anno"> @RequestMapping("demo")</div>
-                        <div class="clazz">public class DemoApplication {</div>
-                        <div class="normal layer-2">public static void main(String[] args) {</div>
-                        <div class="normal layer-3">SpringApplication.run(DemoApplication.class, args);</div>
-                        <div class="normal layer-2">}</div>
-                        <div class="normal layer-2">@PostMapping</div>
-                        <div class="normal layer-2"> public String hello(Student student) {</div>
-                        <div class="normal layer-3"> return "hello,"+student.getName();</div>
-                        <div class="normal layer-2">}</div>
-                        <div class="normal layer-1">}</div>
-
-
-                        <br>
-
-                    </div>
-                </div>
-            </div>
-            <div class="paragraph">
-                <div class="content">
-                    Curl or postman is a good tool if we want to test the interface. But if we want to solidify the test
-                    or conduct highly automated test, we can also write some interface tests in the test class. The code
-                    is as follows:
-                    <div id="code2" class="code"></div>
-
-                </div>
-            </div>
-            <div class="paragraph">
-                <div class="content">
-
-                </div>
-
-            </div>
-            <div class="paragraph">
-                <div class="content">
-                    It seems to work very well, but it's not concise enough
-
-                </div>
-                <div class="content">
-                    In fact, if the @Requestbody annotation is in the parameter, or there is an interface for file
-                    upload, we usually have to try to construct the appropriate parameter and then call RestTemplate
-
-                </div>
-            </div>
-            <div class="paragraph">
-                <div class="content">
-                    Why don't we ignore some details and make it simpler.
-                    That's why autumn was born.
-                </div>
-                <div class="content">
-
-                    Here's the code for autumn
-                </div>
-
-            </div>
-            <div class="paragraph">
-                <div class="content">
-                    <div class="code" id="code3"></div>
-                </div>
-                <div class="content">
-                    Autumn provides the ability to convert a method call to an interface call, which means that you
-                    think you are calling a method, but you are actually calling the interface corresponding to the
-                    method. It's fun, isn't it
-                </div>
-            </div>
-            <div class="paragraph" id="benefit">
-                <h1>3.Benefit</h1>
-                <div>
-
-                </div>
-            </div>
-
-        </div>
-    </div>
-</div>
-
-
-</html>
-<script>
-    var code1 =
-        `
-package io.github.q843705423;
-
-import io.github.q843705423.entity.Student;
-import org.springframework.boot.SpringApplication;
-import org.springframework.boot.autoconfigure.SpringBootApplication;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-
-@SpringBootApplication
-@RestController
-@RequestMapping("demo")
-public class DemoApplication {
-
-    public static void main(String[] args) {
-        SpringApplication.run(DemoApplication.class, args);
-    }
-
-    @PostMapping("world")
-    public String hello(Student student) {
-        return "hello,"+student.getName();
-    }
-
-}
-        `;
-    var code2 = `
-
-package io.github;
-
-import org.junit.Test;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.client.RestTemplate;
-
-public class DemoApplicationTests {
-
-    @Test
-    public void test1() {
-        RestTemplate restTemplate = new RestTemplate();
-        String s = restTemplate.postForObject("http://localhost:8000/demo/hello?id=1&name=Tom", new HttpEntity<>(null), String.class);
-        assert "hello,Tom".equals(s);
-    }
-
-}
-
-    `
-
-    var code3 = `
-package io.github;
-
-import io.github.q843705423.DemoApplication;
-import io.github.q843705423.entity.Student;
-import org.junit.Test;
-import org.seventy.seven.autumn.DefaultContextFactory;
-import org.seventy.seven.autumn.entity.Configuration;
-
-public class DemoApplicationTests {
-
-    @Test
-    public void test() {
-        DefaultContextFactory defaultContextFactory = new DefaultContextFactory(new Configuration("http://127.0.0.1:8000"));
-        DemoApplication controller = defaultContextFactory.getBean(DemoApplication.class);
-        String tom = controller.hello(new Student("1", "Tom"));
-        assert "hello,Tom".equals(tom);
-    }
-}
-    `
-
-    function colorful(code) {
-        code = code.replace(/([a-z][A-Z]*)/g, "$1");
-        code = code.replace(/public/g, "<span style='color:orange'>public</span>")
-        code = code.replace(/import/g, "<span style='color:orange'>import</span>")
-        code = code.replace(/static/g, "<span style='color:orange'>static</span>")
-        code = code.replace(/void/g, "<span style='color:orange'>void</span>")
-        code = code.replace(/class/g, "<span style='color:orange'>class</span>")
-        return code;
-
-    }
-
-    // console.log(find)
-
-
-    function good(normalLine, layerNum) {
-        if (normalLine.indexOf('import') !== -1) {
-            return '<div class="import layer-{num}">{normalLine}</div>'
-                .replace("{normalLine}", normalLine).replace("{num}", layerNum);
-        } else if (normalLine.indexOf("package") !== -1) {
-            return '<div class="packageName layer-{num}">{normalLine}</div>'
-                .replace("{normalLine}", normalLine).replace("{num}", layerNum);
-        } else if (normalLine.indexOf('@') !== -1) {
-            return '<div class="anno layer-{num}">{normalLine}</div>'
-                .replace("{normalLine}", normalLine).replace("{num}", layerNum);
-        } else {
-            return '<div class="normal layer-{num}">{normalLine}</div>'
-                .replace("{normalLine}", normalLine).replace("{num}", layerNum);
-        }
-        // return normalLine;
-
-    }
-
-    function form(a, divId) {
-        a = colorful(a);
-
-        let all = '';
-        let normalLine = '';
-        let nowLayerNum = 1;
-        let nextLayerNum = 1;
-        for (let i = 0; i < a.length; i++) {
-            normalLine += a[i];
-            if (a[i] === '\n') {
-                nextLayerNum = nowLayerNum;
-                if (normalLine.indexOf("{") !== -1) {
-                    nextLayerNum++;
-                }
-                if (normalLine.indexOf("}") !== -1) {
-                    nowLayerNum--;
-                }
-                all += good(normalLine, nowLayerNum);
-                normalLine = '';
-                nowLayerNum = nextLayerNum;
-                nextLayerNum = nowLayerNum;
-
-            }
-        }
-        document.getElementById(divId).innerHTML = all;
-    }
-
-    form(code1, "code1");
-    form(code2, "code2");
-    form(code3, "code3");
-
-
-</script>
-<style>
-    * {
-        margin: 0 0 0 0;
-        padding: 0 0 0 0;
-    }
-
-    h1 {
-        font-size: 40px;
-    }
-
-    .all {
-        margin: 70px 0 0 80px;
-
-    }
-
-    .ul {
-
-    }
-
-    .li {
-        font-size: 30px;
-        line-height: 50px;
-
-    }
-
-    .code {
-        padding: 10px 10px;
-        color: white;
-        margin: 20px 0 0 0;
-        background: black;
-    }
-
-    .menu {
-        float: left;
-    }
-
-    .body {
-        float: left;
-
-    }
-
-    .clear {
-        clear: none;
-        content: '';
-    }
-
-    .allContent {
-        margin: 20px 0 0 80px;
-    }
-
-    .paragraph {
-        margin-bottom: 40px;
-    }
-
-    .content {
-        margin: 40px 0 0 0;
-        text-indent: 40px;
-        font-size: 20px
-
-
-    }
-
-    .clazz {
-        color: white;
-    }
-
-    .packageName {
-        color: white;
-    }
-
-    .import {
-        color: white;
-    }
-
-
-    .import {
-
-    }
-
-    .layer-1 {
-        margin-left: 0px;
-
-    }
-
-    .layer-2 {
-        margin-left: 40px;
-
-    }
-
-    .layer-3 {
-        margin-left: 80px;
-
-    }
-
-    .layer-4 {
-        margin-left: 120px;
-
-    }
-
-    .anno {
-        color: burlywood;
-    }
-
-    .normal {
-        color: white;
-    }
-
-</style>
+<!doctype html><html lang="zh-CN"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="renderer" content="webkit"><title>RuoYi-App</title><link rel="shortcut icon" type="image/x-icon" href="./static/favicon.ico"><script>var coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)') || CSS.supports('top: constant(a)'))
+			document.write('<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' + (coverSupport ? ', viewport-fit=cover' : '') + '" />')</script><link rel="stylesheet" href="./static/index.2da1efab.css"/><script defer="defer" src="./static/js/chunk-vendors.62bf7704.js"></script><script defer="defer" src="./static/js/index.55365706.js"></script></head><body><noscript><strong>本站点必须要开启JavaScript才能运行.</strong></noscript><div id="app"></div></body></html>
