--- a/index.html
+++ b/index.html
@@ -1,2 +1,26 @@
-<!doctype html><html lang="zh-CN"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="renderer" content="webkit"><title>RuoYi-App</title><link rel="shortcut icon" type="image/x-icon" href="./static/favicon.ico"><script>var coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)') || CSS.supports('top: constant(a)'))
-			document.write('<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' + (coverSupport ? ', viewport-fit=cover' : '') + '" />')</script><link rel="stylesheet" href="./static/index.2da1efab.css"/><script defer="defer" src="./static/js/chunk-vendors.62bf7704.js"></script><script defer="defer" src="./static/js/index.55365706.js"></script></head><body><noscript><strong>本站点必须要开启JavaScript才能运行.</strong></noscript><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>纯css气泡背景</title>
+  <link rel="stylesheet" href="./index.css">
+</head>
+<body>
+  <div class="bruce">
+    <ul class="bubble-bgwall">
+      <li>Love</li>
+      <li>Love</li>
+      <li>Love</li>
+      <li>Love</li>
+      <li>Love</li>
+      <li>Love</li>
+      <li>Love</li>
+      <li>Love</li>
+      <li>Love</li>
+      <li>Love</li>
+    </ul>
+  </div>
+</body>
+</html>
